# autopad

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: ex1.rs  main.rs
src/: lib.rs
